--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-datepicker": "^2.13.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
