--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.13.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
