--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.0",
     "react-foundation": "^0.9.6",
+    "react-pose": "^4.0.10",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1"
   },
