--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "google-map-react": "^1.1.6",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-range-slider": "^0.3.0",
     "react-datepicker": "^2.13.0",
     "react-dates": "^21.8.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.13.0",
     "react-foundation": "^0.9.6",
     "react-scripts": "3.4.0",
