--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.0",
     "react-foundation": "^0.9.6",
     "react-pose": "^4.0.10",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1"
   },
