--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "moment": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
